# ExcelConfigTool

./: .gitignore  Build.bat  Build.sh  Build_Programmer.bat  Build_Programmer.sh  Run.bat  Run.sh  Setup.bat  Setup.sh  Test.bat  Unity工作流.docx  pyproject.toml  实现思路.txt  实现详情.txt  环境配置.docx
Excel/: Level.xlsx  Sample.xlsx  Sample1.xlsx
Output/: Sample.cs  Sample.proto  Sample1.cs  Sample1.proto  Sample1_pb2.py  Sample_pb2.py
Output/config/: Sample1Config.cs  SampleConfig.cs
Output/proto/: Sample.proto  Sample1.proto
Output/proto_cs/: Sample.cs  Sample1.cs
Output/proto_py/: Sample1_pb2.py  Sample_pb2.py
Templates/: class_template.cs
Tools/: code_generator.py  csharp_generator.py  data_generator.py  excel_reader.py  generate_config_cs.py  main.py  test.py  util.py  validator.py
Tools/protoc/: readme.txt
