[tool.poetry]
name = "excel-tool"
version = "0.1.0"
description = "A tool for processing Excel config files"
authors = ["Yuankun Huang <buptforeverbean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
